--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -39,3 +39,30 @@
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
   </mat-card-content>
+
+<mat-card class="cart-card">
+  <mat-card-title>Your Shopping Cart</mat-card-title>
+  <mat-card-content>
+    <mat-list>
+      @for (item of cartItems(); track item) {
+        <mat-list-item>
+          <div matListItemTitle>{{ item.productName }}</div>
+          <div matListItemLine>
+            <div class="mat-list-item-container">
+              <!--<mat-form-field class="quantity-input">
+                <input aria-label="quantity" matInput type="number" [value]="item.quantity"
+                       min="1" (change)="updateQuantity(item, $event)">
+              </mat-form-field>-->
+
+              <span class="item-price">{{ item.price | currency:'EUR'}}</span>
+
+              <button mat-icon-button color="warn" (click)="removeFromCart(item)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
+          </div>
+        </mat-list-item>
+      }
+    </mat-list>
+  </mat-card-content>
+</mat-card>
