--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -1,5 +1,7 @@
-#product-list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+#product-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  gap: 20px;
+  padding: 20px;
+  background: azure;
 }
