--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -1,17 +1,14 @@
-<p>product works!</p>
-<mat-card id="product">
-  <mat-card-header>
-    <mat-card-title>
-      {{ product().productName }}
-    </mat-card-title>
-  </mat-card-header>
+<mat-card id="product-card">
   <mat-card-content>
+    <h2>{{ product().productName }}</h2>
     {{ product().category }} <br>
-    {{ product().price | currency:'EUR'}}
+    {{ product().price | currency:'EUR'}}<br>
+    <p class="price"> Prix TTC : {{ calculatePriceTTC(product()) | currency:'EUR' }}</p><br>
+    Quantité en stock : {{ product().quantity || 0 }}
   </mat-card-content>
   <mat-card-actions>
-    <button mat-raised-button color="primary" (click)="addToCart(product())">
-      Ajouter au panier
+    <button mat-raised-button color="primary"  (click)="addToCart()">
+      <mat-icon>add_shopping_cart</mat-icon> Add to Cart
     </button>
   </mat-card-actions>
 </mat-card>
