--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,21 +1,20 @@
-<p>product-list works!</p>
+<div>
+  <mat-form-field class="category">
+    <mat-label>Catégorie</mat-label>
+    <mat-select (selectionChange)="selectedCategory.set($event.value)">
+      @for (category of categories(); track category) {
+        <mat-option [value]="category"> {{ category }}</mat-option>
+      }
+    </mat-select>
+  </mat-form-field>
 
-<!-- Liste déroulante pour sélectionner une catégorie -->
-<mat-form-field>
-  <mat-label>Catégorie</mat-label>
-  <mat-select (selectionChange)="selectedCategory.set($event.value)">
-    @for (category of categories(); track category) {
-      <mat-option [value]="category"> {{ category }} </mat-option>
+  <!-- Liste des produits filtrés -->
+  <mat-card id="product-grid">
+    @for (product of filteredProducts(); track product) {
+      <app-product [product]="product"/>
     }
-  </mat-select>
-</mat-form-field>
-
-<!-- Liste des produits filtrés -->
-<mat-card id="product-grid">
-  @for (product of filteredProducts() ; track product) {
-    <app-product [product]="product" />
-  }
-</mat-card>
+  </mat-card>
+</div>
 
 
 
