JIRA-05: panier Vide

--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -29,4 +29,6 @@
       </button>
     </mat-card-actions>
   </mat-card>
+} @else {
+  <div class="empty-cart-title">Votre panier est vide :’(</div>
 }
