--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -79,3 +79,12 @@
 .item-cart {
   white-space: normal;
 }
+
+.empty-cart-title {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #555555;
+  margin: 20px 0;
+  padding: 10px;
+}
