JIRA-11: test deploy

--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -8,7 +8,7 @@
     @if (product().quantity > 0) {
       <p class="in-stock"> Quantité en stock : {{ product().quantity }}</p>
     } @else {
-      <p class="out-of-stock">Non disponible</p>
+      <p class="out-of-stock">Not available</p>
     }
 
     <br><br>
